# devil-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
app/: auth.py  main.py
app/api/endpoints/: dns.py  ftp.py  info.py  mail.py  mongo.py  mysql.py  pgsql.py  port.py  repo.py  ssl.py  vhost.py  www.py
app/schemas/: dns.py  ftp.py  mail.py  mongo.py  mysql.py  pgsql.py  port.py  repo.py  ssl.py  vhost.py  www.py
app/services/: socket_client.py
tests/: conftest.py  test_auth.py  test_auth_rate_limit.py  test_health.py  test_mysql_privileges_payload.py
